src/commands/transcode/tests/snapshots/caesura__commands__transcode__tests__transcode_command_tests__transcode_command_flac24_441.snap
---
source: src/commands/transcode/tests/transcode_command_tests.rs
expression: snapshot
---
- directory: "Unknown Artist - Test Album [2020] [WEB 320]"
  filename: Test Artist - Test Album - 01 Track One.mp3
  size: 2604910
  sha256: a3921e5a0f7af99a5ea8cb9d1d047548576fa02366973f008132a04fc1ee6364
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSettings: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Unknown Artist - Test Album [2020] [WEB 320]"
  filename: Test Artist - Test Album - 02 Track Two.mp3
  size: 2604910
  sha256: 91302550eb284b1c65627224b1099ab164136f5cbf4181f5841c2bc090afdd8a
  audio:
    duration_ms: 65045
    overall_bitrate: 320
    audio_bitrate: 320
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSettings: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Unknown Artist - Test Album [2020] [WEB 320]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
- directory: "Unknown Artist - Test Album [2020] [WEB V0]"
  filename: Test Artist - Test Album - 01 Track One.mp3
  size: 1401795
  sha256: d8d77fb1bb982b93aff9d8a73afc6cb0bc8b51aac4ee205054d639eea260fdcc
  audio:
    duration_ms: 65045
    overall_bitrate: 172
    audio_bitrate: 172
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSettings: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Unknown Artist - Test Album [2020] [WEB V0]"
  filename: Test Artist - Test Album - 02 Track Two.mp3
  size: 1330916
  sha256: a4de4150d94d4c1e1e1acf734ce7110a2f60723e3e1c1274584b85cb59de8f36
  audio:
    duration_ms: 65045
    overall_bitrate: 163
    audio_bitrate: 163
    sample_rate: 44100
    bit_depth: ~
    channels: 2
    channel_mask: 3
    tags:
      Id3v2:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSettings: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: "Unknown Artist - Test Album [2020] [WEB V0]"
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
